com7 big update
